2013-09-09  Andrew John Hughes  <gnu.andrew@redhat.com>

	* Makefile.am:
	(JDK_CHANGESET): Update to final icedtea-2.4.2
	tag.
	(JDK_SHA256SUM): Likewise.
	* NEWS: Update with additional JDK bug fixes
	RH661505 & RH995488.

2013-09-09  Andrew John Hughes  <gnu.andrew@redhat.com>

	* NEWS: Mention RH991170, PR1536, PR1551, PR1552,
	PR1553 and PR1554.
	* acinclude.m4:
	(IT_SET_ARCH_SETTINGS): Add -D_LITTLE_ENDIAN to arm
	and support arm64|aarch64.
	(IT_ENABLE_ZERO_BUILD): Explicitly set ZERO_BITSPERWORD
	for aarch64, alpha, arm, ia64 && sh.  Replace sparc64 with
	sparcv9 which is what INSTALL_ARCH_DIR is set to.

2013-08-30  Andrew John Hughes  <gnu.andrew@redhat.com>

	* INSTALL: Update with --enable-system-kerberos
	option.
	* Makefile.am:
	(ICEDTEA_ENV): Set SYSTEM_KRB5, KRB5_LIBS
	and KRB5_CFLAGS.
	* acinclude.m4:
	(IT_CHECK_FOR_KERBEROS): Add --enable-system-kerberos
	option (on by default) which checks for libkrb5 and
	the krb5.h header.
	* configure.ac: Invoke IT_CHECK_FOR_KERBEROS.

2013-07-24  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* NEWS: Mention LCMS 2 change.

2013-07-24  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* acinclude.m4:
	(IT_CHECK_FOR_LCMS): Turn system LCMS back on by
	default if the version is 2.5 or above with the
	latest security fixes.

2013-09-05  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* NEWS:
	Add new OpenJDK changes, remove duplicates
	listed in 2.4.0 which were in earlier
	security releases.

2013-09-04  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am,
	(OPENJDK_VERSION): Bump to b60.
	(CORBA_CHANGESET): Update to IcedTea 2.4 branch HEAD.
	(JAXP_CHANGESET): Likewise.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.